Changed basemap to Hike&Bike

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         var map = new L.Map('map', {
                 center: new L.LatLng(51.4768, 0.0006),
                 zoom: 14,
-                layers: [esri]
+                layers: [hikebike]
         });
         map.addControl(layersControl);
         var marker = L.marker([51.4768, 0.0006]);
