Update Readme on maps & shaders + cosmetics

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <script type="text/javascript">
 
 
-	/****** Adjust the following location (URL) to your Perl script *********/
+	/****** Adjust the following location (URL) to your PHP script *********/
 
-	var phpScript = 'latrine.php'; // /cgi-bin/latrine.pl
+	var phpScript = 'latrine.php'; // /cgi-bin/latrine.php
 
 	/*** Change the following only if you know what you're doing *********/
 
