--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			key = '';
 		} else {
 			key = Check;
-			window.alert('Hallo, ' + key + '  ! \nDies ist ein gültiger Schlüssel?\n\nIhr direkter Link lautet:\nhttp://latrine.prodeia.de/live/#' + key + '');
+			window.alert('Hallo, ' + key + '  ! \nDies ist ein gültiger Schlüssel?\n\nIhr direkter Link lautet:\nhttp://<servder>/#' + key + '');
 		}
 		} else {
 			window.alert('Hallo, ' + key + '  ! \nDies ist ein gültiger Schlüssel?');
