Added and fixed display of free message

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 			lastalt = data.alt;
 
 			// Expand popup 
-			popUpText = popUpText + '<b>'+ key + '<br/></b>'
+			popUpText = popUpText + '<b>'+ key + '</b>: ' + data.message + '<br/>'
 				+ '(Akku: ' + data.battery + '% / GSM: ' + data.gsm_signal + '%)<br/></p>'
 				+ '<p>Speed ( ' + trend + ' ) / Diff: ' + speeddiff + ' m/s<br/>'
 				+ kmh.toFixed(2) + ' km/h<br/>'
