Changed default map

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	var map = new L.Map('map', {
 		center: new L.LatLng(51.4768, 0.0006),
 		zoom: 14,
-		layers: [hikebike]
+		layers: [opentopo]
 	});
 	map.addControl(layersControl);
 
