--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 	<meta http-equiv="imagetoolbar" content="no" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<link type="image/ico" rel="shortcut icon" href="/favicon.ico" />
-	<link rel="stylesheet" href="leaflet0.6.4/leaflet.css" />
-	<!--[if lte IE 8]>
-		<link rel="stylesheet" href="leaflet0.6.4/leaflet.ie.css" />
-	<![endif]-->
-	<script src="leaflet0.6.4/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+
 	<script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<style type="text/css">
 	<!--
